--- a/workexp.html
+++ b/workexp.html
@@ -127,7 +127,7 @@
 <header>
     <div id="navbar">
         <ul>
-            <a href="portfolio.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="aboutme.html"><li>Projects</li></a>
             <a href="workexp.html"><li>Work Experience</li></a>
             <a href="socias.html"><li>Socials</li></a>
