--- a/aboutme.html
+++ b/aboutme.html
@@ -119,19 +119,19 @@
                 <div class="cards">
                     <div class="card">
                         <a href="https://github.com/Raghuveer2005/mc-donalds-sample-website.git" target="_blank">
-                            <img src="Screenshot 2025-04-03 at 11.29.26 AM.png" alt="Project">
+                            <img src="Screenshot2025-04-03at11.29.26A.jpeg" alt="Project">
                             <p>A gourmet clone of mcdonalds.</p>
                         </a>
                     </div>
                     <div class="card">
                         <a href="https://github.com/Raghuveer2005/calculator.git" target="_blank">
-                            <img src="Screenshot 2025-04-03 at 5.37.36 PM.png" alt="Project">
+                            <img src="Screenshot2025-04-03at5.37.36P.jpeg" alt="Project">
                             <p>A calculator made using only HTML!</p>
                         </a>
                     </div>
                     <div class="card">
                         <a href="https://github.com/Raghuveer2005/landing-page.git" target="_blank">
-                            <img src="Screenshot 2025-04-03 at 5.48.49 PM.png" alt="Project">
+                            <img src="Screenshot2025-04-03at5.48.49P.jpeg" alt="Project">
                             <p>A demo landingpage created during my internship with Codsoft.</p>
                         </a>
                     </div>
