--- a/aboutme.html
+++ b/aboutme.html
@@ -101,6 +101,14 @@
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
+        button{
+            padding: 10px;
+            color: #ffffff;
+            background-color: #3c095e;
+            border-radius: 20px;
+            border: 1px solid black;
+            box-shadow: 0px 2px 12px rgb(57, 9, 94) ;
+        }
 
     </style>
 </head>
@@ -121,18 +129,21 @@
                         <a href="https://github.com/Raghuveer2005/mc-donalds-sample-website.git" target="_blank">
                             <img src="Screenshot2025-04-03at11.29.26A.jpeg" alt="Project">
                             <p>A gourmet clone of mcdonalds.</p>
+                            <a href="https://mc-donalds-sample-website.vercel.app/"><button>Preview</button></a>
                         </a>
                     </div>
                     <div class="card">
                         <a href="https://github.com/Raghuveer2005/calculator.git" target="_blank">
                             <img src="Screenshot2025-04-03at5.37.36P.jpeg" alt="Project">
                             <p>A calculator made using only HTML!</p>
+                            <a href="https://calculator-orcin-mu.vercel.app/"><button>Preview</button></a>
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://github.com/Raghuveer2005/landing-page.git" target="_blank">
+                        <a href="https://landing-page-eight-tau-28.vercel.app/" target="_blank">
                             <img src="Screenshot2025-04-03at5.48.49P.jpeg" alt="Project">
                             <p>A demo landingpage created during my internship with Codsoft.</p>
+                            <a href=""><button>Preview</button></a>
                         </a>
                     </div>
                 </div>
