--- a/aboutme.html
+++ b/aboutme.html
@@ -129,21 +129,21 @@
                         <a href="https://github.com/Raghuveer2005/mc-donalds-sample-website.git" target="_blank">
                             <img src="Screenshot2025-04-03at11.29.26A.jpeg" alt="Project">
                             <p>A gourmet clone of mcdonalds.</p>
-                            <a href="https://mc-donalds-sample-website.vercel.app/"><button>Preview</button></a>
+                            <a href="https://mc-donalds-sample-website.vercel.app/" target="_blank"><button>Preview</button></a>
                         </a>
                     </div>
                     <div class="card">
                         <a href="https://github.com/Raghuveer2005/calculator.git" target="_blank">
                             <img src="Screenshot2025-04-03at5.37.36P.jpeg" alt="Project">
                             <p>A calculator made using only HTML!</p>
-                            <a href="https://calculator-orcin-mu.vercel.app/"><button>Preview</button></a>
+                            <a href="https://calculator-orcin-mu.vercel.app/ "target="_blank"><button>Preview</button></a>
                         </a>
                     </div>
                     <div class="card">
                         <a href="https://landing-page-eight-tau-28.vercel.app/" target="_blank">
                             <img src="Screenshot2025-04-03at5.48.49P.jpeg" alt="Project">
                             <p>A demo landingpage created during my internship with Codsoft.</p>
-                            <a href=""><button>Preview</button></a>
+                            <a href="https://landing-page-eight-tau-28.vercel.app/" "target="_blank" ><button>Preview</button></a>
                         </a>
                     </div>
                 </div>
