--- a/aboutme.html
+++ b/aboutme.html
@@ -143,7 +143,7 @@
                         <a href="https://landing-page-eight-tau-28.vercel.app/" target="_blank">
                             <img src="Screenshot2025-04-03at5.48.49P.jpeg" alt="Project">
                             <p>A demo landingpage created during my internship with Codsoft.</p>
-                            <a href="https://landing-page-eight-tau-28.vercel.app/" "target="_blank" ><button>Preview</button></a>
+                            <a href="https://landing-page-eight-tau-28.vercel.app/" target="_blank" ><button>Preview</button></a>
                         </a>
                     </div>
                 </div>
