--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
        
     </div>
 
-    <img id="profilepic" src="IMG_5164.jpg" alt="Profile Picture">
+    <img id="profilepic" src="f5e485f8-ae66-4729-bcfa-234eb875e680.jpg" alt="Profile Picture">
     <br><br><br>
     <hr>
        <h1 class="about-me">About Me</h1>
